[gd_scene format=3]

[ext_resource type="Script" path="res://demo/auto_test/auto_test.gd" id="1_script"]

[node name="AutoTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Root" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Margin/Root"]
layout_mode = 2
text = "SimpleWebRTC Auto Test"

[node name="ConfigRow" type="HBoxContainer" parent="Margin/Root"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RoleLabel" type="Label" parent="Margin/Root/ConfigRow"]
layout_mode = 2
text = "Role"

[node name="RoleOption" type="OptionButton" parent="Margin/Root/ConfigRow"]
unique_name_in_owner = true
layout_mode = 2

[node name="IterationsLabel" type="Label" parent="Margin/Root/ConfigRow"]
layout_mode = 2
text = "Iterations"

[node name="IterationsSpin" type="SpinBox" parent="Margin/Root/ConfigRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 20.0
step = 1.0
value = 3.0

[node name="RunButton" type="Button" parent="Margin/Root/ConfigRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Run Suite"

[node name="ClearButton" type="Button" parent="Margin/Root/ConfigRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="StatusLabel" type="Label" parent="Margin/Root"]
unique_name_in_owner = true
layout_mode = 2
text = "Idle"

[node name="Output" type="RichTextLabel" parent="Margin/Root"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
